# vanity-key-gen

./: .clang-format  .cmake-format.json  .editorconfig  .gitignore  .local_vimrc.vim  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cu
